--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
   "name": "xacademy",
   "version": "1.0.0",
-  "description": "Nuestro primer proyecto con Node",
+  "description": "Trabajo de Node Js",
   "main": "src/app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "author": "nsecchi",
+  "author": "maxi",
   "license": "ISC",
   "dependencies": {
     "axios": "^1.4.0",
